--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   --color-Slate-500: hsl(200, 26%, 54%);
   --color-Slate-700: hsl(200, 24%, 40%);
   --color-Slate-900: hsl(202, 55%, 16%);
+  --color-Slate-900-light: hsla(202, 55%, 16%, 15%);
 }
 
 @font-face {
@@ -31,8 +32,9 @@ body {
 }
 
 main {
+  box-shadow: 0px 32px 64px 0px var(--color-Slate-900-light);
   width: 75dvw;
-  margin: 5% auto auto auto;
+  margin: 10% auto 4% auto;
   background-color: var(--color-White);
   border-radius: 24px;
 }
@@ -298,6 +300,15 @@ button:focus {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.border-red {
+  border-color: var(--color-Red);
+}
+
+.bg-red {
+  background-color: var(--color-Red);
+  color: var(--color-White);
 }
 
 @media screen and (max-width: 1195px) {
