--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body {
 main {
   box-shadow: 0px 32px 64px 0px var(--color-Slate-900-light);
   width: 75dvw;
-  margin: 14% auto 4% auto;
+  margin: 15% auto 4% auto;
   background-color: var(--color-White);
   border-radius: 24px;
 }
@@ -269,6 +269,7 @@ input[type="radio"] {
 
 .radio-label {
   margin-bottom: 0px;
+  font-weight: bold;
 }
 
 .inline {
